# code

./: .pre-commit-config.yaml  README.md  config.py  conftest.py  fastapi_app.py  foo.db  model.py  orm.py  pyproject.toml  repository.py  services.py  sync.py  test_allocate.py  test_api.py  test_batches.py  test_model.py  test_orm.py  test_repository.py  test_services.py  test_sqlite_orm.py  test_sync.py
adapters/: orm.py  repository.py
domain/: model.py
entrypoints/: fastapi_app.py
service_layer/: services.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_repository.py
tests/unit/: test_allocate.py  test_batches.py  test_services.py
