[tool.poetry]
name = "cosmicpython-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cosmicpython_code"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
sqlalchemy = "^2.0.12"
fastapi = "^0.95.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
